--- a/public_html/production/assets/sass/_menu.scss
+++ b/public_html/production/assets/sass/_menu.scss
@@ -213,7 +213,7 @@
 }
 
 .meal-container.active {
-	max-height: 50em;
+	max-height: 500em;
 }
 
 .meal-container.active .meal-nav {
